5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1637_2443.log
== TEST (2019-04-11 11:03:41) 
-- CODE:
from math import
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=int(input("valor da gasosa ou do ar: (1/2)"))

if(num==1):
	
	voles=(4*pi*(raio**3))/3
	
	valcal=((pi*(alt**2)*(3*raio-alt)))/3
	
	print(round(voles-valcal,4))
	
else:
	valcal=((pi*(alt**2)*(3*raio-alt)))/3
	
	print(round(valcal,4))
	
	
	
	
	

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:05:13) 
-- CODE:
from math import
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=(input("valor da gasosa ou do ar: (1/2)"))
voles=(4*pi*(raio**3))/3
valcal=((pi*(alt**2)*(3*raio-alt)))/3

if(num=="1"):
	
	print(round(voles-valcal,4))
	
else:
	
	print(round(valcal,4))
	
	
	
	
	

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:05:27) 
-- CODE:
from math import *
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=(input("valor da gasosa ou do ar: (1/2)"))
voles=(4*pi*(raio**3))/3
valcal=((pi*(alt**2)*(3*raio-alt)))/3

if(num=="1"):
	
	print(round(voles-valcal,4))
	
else:
	
	print(round(valcal,4))
	
	
	
	
	

-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:06:03) 
-- CODE:
from math import *
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=(input("valor da gasosa ou do ar: (1/2)"))
voles=(4*pi*(raio**3))/3
valcal=((pi*(alt**2)*(3*raio-alt)))/3

if(num=="1"):
	
	print(round(voles-valcal,4))
	
else:
	
	print(round(valcal,4))
	
	
	
	
	

-- EXECUTION TIME:
0.208406
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:06:45) 
-- CODE:
from math import *
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=(input("valor da gasosa ou do ar: (1/2)"))
voles=(4*pi*(raio**3))/3
valcal=((pi*(alt**2)*(3*raio-alt)))/3

if(num=="2"):
	
	print(round(voles-valcal,4))
	
else:
	
	print(round(valcal,4))
	
	
	
	
	

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:01) 
-- CODE:
from math import *
raio=float(input("entre com o valor do raio: "))
alt=float(input("entre com o valor da altura: "))
num=(input("valor da gasosa ou do ar: (1/2)"))
voles=(4*pi*(raio**3))/3
valcal=((pi*(alt**2)*(3*raio-alt)))/3

if(num=="2"):
	
	print(round(voles-valcal,4))
	
else:
	
	print(round(valcal,4))
	
	
	
	
	

-- EXECUTION TIME:
0.142831
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
